<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">-Ant Smasher-</string>
    <string name="crop">Crop</string>
    <string name="crop_image">Choose Image</string>
    <string name="select_picture">Select Picture</string>
    <string name="you_selected">You selected:</string>
    <string name="rotate">Rotate</string>
    <string name="memory_warning">Not enough memory. Sorry...</string>
    <string name="sample_test">Sample Test</string>
    <string name="newPicture">New Picture</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="play">play</string>
    <string name="scores">scores</string>
    <string name="games">Games</string>
    <string name="challenge">challenge</string>
    <string name="options">options</string>
    <string name="shop">Shop</string>
    <string name="smash_your">smash your</string>
    <string name="friends">friends</string>
    <string name="menu">menu</string>
    <string name="loading">Loading...</string>
    <string name="wait_a_minute">Wait a minute</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="rate_stars">Having fun? Rate us!</string>
    <string name="maybe_later">Later.</string>
    <string name="yes">Yes!</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="notify_fishing">Come smash some ants!</string>
    <string name="press_back">Press the back button to play Ant Smasher!</string>
    <string name="trial_ended">Your game time has ended. Buy any product to get more time!</string>
    <string name="babyToastHomeToQuit">In Baby Mode, press HOME to quit</string>
    <string name="kids">Kids</string>
    <string name="fun">fun</string>
    <string name="baby">baby</string>
    <string name="classic">classic</string>
    <string name="highest_scores">highest scores</string>
    <string name="local">local</string>
    <string name="global">global</string>
    <string name="sound">sound</string>
    <string name="background">background</string>
    <string name="reset_scores">reset scores</string>
    <string name="highscores_reset">The highscores board has been reset!</string>
    <string name="h_kids_description">Would you like to turn on Kids Mode?</string>
    <string name="h_fun_description">Would you like to turn on Fun Mode?</string>
    <string name="h_baby_description">Would you like to turn on Baby Mode?</string>
    <string name="h_noAds_description">Eliminate the Ads!</string>
    <string name="h_lives3to4_description">Get more lives?</string>
    <string name="h_lives3to5_description">Get more lives?</string>
    <string name="h_lives4to5_description">Get more lives?</string>
    <string name="h_gameOverProtection_description">Activate Game Over Protection?</string>
    <string name="h_deluxePack_description">Would you like to buy the Deluxe Pack?</string>
    <string name="no_ads_description">This option removes all Ads from gameplay.</string>
    <string name="kids_description">In Kids Mode the ants are slower and the game is easier. Also, when you touch a bee you will lose only one life instead of directly losing the game.</string>
    <string name="fun_description">In Fun Mode when you touch a bee you will lose only one life instead of directly losing the game.</string>
    <string name="baby_description">"In Baby Mode you don't ever lose the game! This is the perfect distraction for your little one!"</string>
    <string name="game_over_protection_description">Game Over Protection will give you one more chance when you are about to lose the game.</string>
    <string name="lives3to4_description">Increase the maximum number of lives from three to four!</string>
    <string name="lives3to5_description">Increase the maximum number of lives from three to five!</string>
    <string name="lives4to5_description">Increase the maximum number of lives from four to five!</string>
    <string name="deluxePack_description">This unlocks all content in the game!</string>
    <string name="h_kids_instructions">Kids Mode now available!</string>
    <string name="h_fun_instructions">Fun Mode now available!</string>
    <string name="h_baby_instructions">Baby Mode now available!</string>
    <string name="h_noAds_instructions">No Ads Mode enabled!</string>
    <string name="h_lives3to4_instructions">More lives in play!</string>
    <string name="h_lives3to5_instructions">More lives in play!</string>
    <string name="h_gameOverProtection_instructions">Game Over Protection activated!</string>
    <string name="h_lives4to5_instructions">More lives in play!</string>
    <string name="h_deluxePack_instructions">Deluxe Pack enabled!</string>
    <string name="kids_instructions">To access Kids Mode tap the Kids button in the play menu!</string>
    <string name="fun_instructions">To access Fun Mode tap the Fun button in the play menu!</string>
    <string name="baby_instructions">To access Baby Mode tap the Baby button in the play menu!</string>
    <string name="noAds_instructions">"From now on you won't be seeing anymore ads!"</string>
    <string name="lives3to4_instructions">The maximum number of lives you can have has now been increased to four! However, you still begin with two.</string>
    <string name="lives3to5_instructions">The maximum number of lives you can have has now been increased to five! However, you still begin with two.</string>
    <string name="gameOverProtection_instructions">You will have one more chance when you are about to lose the game! You can enable or disable this at anytime in the Options menu.</string>
    <string name="lives4to5_instructions">The maximum number of lives you can have has now been increased to five! However, you still begin with two.</string>
    <string name="deluxePack_instructions">All features enabled: No ads, five maximum lives, game over protection, Kids Mode, Fun Mode and Baby Mode enabled.</string>
    <string name="game_modes">game modes</string>
    <string name="game_play">game play</string>
    <string name="no_ads">NO ADS</string>
    <string name="game_over_protection">GAME OVER PROTECTION</string>
    <string name="buyWithTapJoy">Use %d coins!</string>
    <string name="score">score</string>
    <string name="high_score">high score</string>
    <string name="name">name</string>
    <string name="tap_to_change">tap to change</string>
    <string name="play_again">play again</string>
    <string name="submit_score">submit score</string>
    <string name="twitter_msg">I smashed %d ants on #AntSmasher, a FREE Android and iPhone Game! Beat that!!! http://bit.ly/antsmasher</string>
    <string name="facebook_title">I smashed %d ants in Ant Smasher!</string>
    <string name="facebook_msg">This game is SO ADDICTING!</string>
    <string name="form_ask_again">You are leaving without sending any info. Would you allow us to ask you again in the future?</string>
    <string name="form_title">Why do we want to know about you?</string>
    <string name="form_info">"In accordance with our Privacy Policy (available at http://www.bestcoolfungames.com/bcfg/contracts/BcfgPrivacyPolicy.html) your information is kept confidential and anonymous. We only ask these questions to help us make our future games more relevant to you.
If you still don't want to answer, please press the back button."</string>
</resources>
