<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/playMenu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_initial_no_logo" >

    <ImageView
        android:id="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6.0dip"
        android:layout_marginTop="6.0dip"
        android:src="@drawable/ant_logo" />

    <Button
        android:id="@id/Kids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="4.0dip"
        android:layout_marginTop="0.0dip"
        android:background="@drawable/kids_mode" />

    <TextView
        android:id="@id/kidsButtonText"
        android:layout_width="99.0dip"
        android:layout_height="120.0dip"
        android:layout_marginLeft="46.0dip"
        android:layout_marginTop="100.0dip"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/kids"
        android:textColor="#ffffffff"
        android:textSize="42.0sp" />

    <Button
        android:id="@id/Classical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50.0dip"
        android:layout_marginTop="0.0dip"
        android:background="@drawable/classic_mode" />

    <TextView
        android:id="@id/classicButtonText"
        android:layout_width="130.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="167.0dip"
        android:layout_marginTop="138.0dip"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/classic"
        android:textColor="#ffffffff"
        android:textSize="49.0sp" />

    <Button
        android:id="@id/Fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10.0dip"
        android:background="@drawable/fun_mode" />

    <TextView
        android:id="@id/funButtonText"
        android:layout_width="80.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37.0dip"
        android:layout_marginTop="166.0dip"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/fun"
        android:textColor="#ffffffff"
        android:textSize="53.0sp" />

    <Button
        android:id="@id/Baby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30.0dip"
        android:background="@drawable/baby_mode" />

    <TextView
        android:id="@id/babyButtonText"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="194.0dip"
        android:layout_marginTop="252.0dip"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/baby"
        android:textColor="#ffffffff"
        android:textSize="39.0sp" />

    <Button
        android:id="@id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="0.0dip"
        android:background="@drawable/menu" />

    <TextView
        android:id="@id/backButtonText"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24.0dip"
        android:layout_marginTop="369.0dip"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/menu"
        android:textColor="#ffffffff"
        android:textSize="40.0sp" />

</RelativeLayout>