<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res/com.bestcoolfungames.antsmasher"
    android:id="@id/optionsLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/opt_bg" >

    <RelativeLayout
        android:id="@id/optionsBox"
        android:layout_width="288.0dip"
        android:layout_height="398.0dip"
        android:background="@drawable/opt_box" >

        <TextView
            android:id="@id/optText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="0.0dip"
            android:layout_marginTop="0.0dip"
            android:background="#00000000"
            android:gravity="right|center"
            android:shadowColor="#ff000000"
            android:shadowRadius="8.0"
            android:text="@string/options"
            android:textColor="#ffffffff"
            android:textSize="10.0sp" />

        <TextView
            android:id="@id/soundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="0.0dip"
            android:background="#00000000"
            android:gravity="left|center"
            android:shadowColor="#ff000000"
            android:shadowRadius="8.0"
            android:text="@string/sound"
            android:textColor="#ffffffff"
            android:textSize="10.0sp" />

        <TextView
            android:id="@id/backgroundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="0.0dip"
            android:background="#00000000"
            android:gravity="left|center"
            android:shadowColor="#ff000000"
            android:shadowRadius="8.0"
            android:text="@string/background"
            android:textColor="#ffffffff"
            android:textSize="10.0sp" />

        <ImageView
            android:id="@id/soundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/sound" />

        <ImageView
            android:id="@id/vibrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/vibration" />

        <ImageView
            android:id="@id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/menu" />

        <TextView
            android:id="@id/menuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/menuButton"
            android:layout_alignTop="@id/menuButton"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="0.0dip"
            android:background="#00000000"
            android:gravity="center"
            android:shadowColor="#ff000000"
            android:shadowRadius="8.0"
            android:text="@string/menu"
            android:textColor="#ffffffff"
            android:textSize="10.0sp" />

        <ImageView
            android:id="@id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/reset_scores" />

        <TextView
            android:id="@id/resetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/resetButton"
            android:layout_alignTop="@id/resetButton"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="0.0dip"
            android:background="#00000000"
            android:gravity="center"
            android:shadowColor="#ff000000"
            android:shadowRadius="8.0"
            android:text="@string/reset_scores"
            android:textColor="#ffffffff"
            android:textSize="20.0sp" />

        <ImageView
            android:id="@id/gameoverProtectionOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/gameoverprot_shop" />

        <TextView
            android:id="@id/gopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/gameoverProtectionOption"
            android:layout_alignTop="@id/gameoverProtectionOption"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="0.0dip"
            android:background="#00000000"
            android:gravity="center"
            android:shadowColor="#ff000000"
            android:shadowRadius="8.0"
            android:text="@string/game_over_protection"
            android:textColor="#ffffffff"
            android:textSize="10.0sp" />

        <ImageView
            android:id="@id/frame01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/frame_01" />
    </RelativeLayout>

</RelativeLayout>