<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res/com.bestcoolfungames.antsmasher"
    android:id="@id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_initial_no_logo"
    android:orientation="vertical" >

    <ImageView
        android:id="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6.0dip"
        android:layout_marginTop="6.0dip"
        android:src="@drawable/ant_logo" />

    <Button
        android:id="@id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="0.0dip"
        android:background="@drawable/play" />

    <TextView
        android:id="@id/playButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/playButton"
        android:layout_alignTop="@id/playButton"
        android:layout_marginLeft="0.0dip"
        android:layout_marginTop="0.0dip"
        android:background="#00000000"
        android:gravity="center"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/play"
        android:textColor="#ffffffff"
        android:textSize="20.0sp" />

    <Button
        android:id="@id/Smash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_below="@id/Fun"
        android:layout_marginRight="6.0dip"
        android:layout_marginTop="65.0dip"
        android:background="@drawable/smash_your_friends" />

    <TextView
        android:id="@id/smashYourButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Smash"
        android:layout_alignTop="@id/Smash"
        android:layout_marginLeft="0.0dip"
        android:layout_marginTop="0.0dip"
        android:background="#00000000"
        android:gravity="center"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/smash_your"
        android:textColor="#ffffffff"
        android:textSize="28.0sp" />

    <TextView
        android:id="@id/friendsButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/Smash"
        android:layout_alignRight="@id/Smash"
        android:layout_marginBottom="0.0dip"
        android:layout_marginRight="0.0dip"
        android:background="#00000000"
        android:gravity="center"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/friends"
        android:textColor="#ffffffff"
        android:textSize="38.0sp" />

    <Button
        android:id="@id/scoresButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="100.0dip"
        android:background="@drawable/scores" />

    <TextView
        android:id="@id/scoresButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/scoresButton"
        android:layout_alignTop="@id/scoresButton"
        android:layout_marginLeft="0.0dip"
        android:layout_marginTop="0.0dip"
        android:background="#00000000"
        android:gravity="center"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/scores"
        android:textColor="#ffffffff"
        android:textSize="38.0sp" />

    <Button
        android:id="@id/storeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6.0dip"
        android:layout_marginTop="148.0dip"
        android:background="@drawable/shop" />

    <TextView
        android:id="@id/storeButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/storeButton"
        android:layout_alignTop="@id/storeButton"
        android:layout_marginLeft="0.0dip"
        android:layout_marginTop="0.0dip"
        android:background="#00000000"
        android:gravity="center"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/shop"
        android:textColor="#ffffffff"
        android:textSize="42.0sp" />

    <Button
        android:id="@id/optionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70.0dip"
        android:layout_marginTop="176.0dip"
        android:background="@drawable/options" />

    <TextView
        android:id="@id/optionsButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/optionsButton"
        android:layout_alignTop="@id/optionsButton"
        android:layout_marginLeft="0.0dip"
        android:layout_marginTop="0.0dip"
        android:background="#00000000"
        android:gravity="center"
        android:shadowColor="#ff000000"
        android:shadowRadius="8.0"
        android:text="@string/options"
        android:textColor="#ffffffff"
        android:textSize="38.0sp" />

    <Button
        android:id="@id/gamesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Smash"
        android:layout_marginTop="2.0dip"
        android:background="@drawable/moregames" />

    <ImageView
        android:id="@id/tap_joy_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0.0dip"
        android:background="@drawable/caixa_de_texto" />

</RelativeLayout>